[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kuristo"
version = "0.1.0"
description = "A heavy-weight testing framework"
authors = [{ name = "David Andrs", email = "andrsd@gmail.com" }]
dependencies = []
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
kuristo = "kuristo.__main__:main"
