[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kuristo"
dynamic = ["version"]
description = "A heavy-weight testing framework"
authors = [{ name = "David Andrs", email = "andrsd@gmail.com" }]
dependencies = []
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
kuristo = "kuristo.__main__:main"

[tool.setuptools_scm]
version_file = "kuristo/_version.py"
