[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kuristo"
dynamic = ["version"]
description = "A simple automation framework"
authors = [{ name = "David Andrs", email = "andrsd@gmail.com" }]
dependencies = ["pyyaml", "rich", "networkx", "jinja2", "pydantic", "h5py"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10, <3.14"

[project.scripts]
kuristo = "kuristo.__main__:main"

[tool.setuptools_scm]
version_file = "kuristo/_version.py"

[tool.coverage.xml]
output = "coverage.xml"

[tool.setuptools.packages.find]
include = ["kuristo*"]

[tool.setuptools.package-data]
"kuristo" = ["templates/*.j2", "_version.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".git",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # I = isort (import sorting)
ignore = [
    "E203",  # Whitespace before ':'
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
